# ml-eng-poc

./: README.md  pyproject.toml
src/: Dockerfile
src/app/: base_app.py  request_body.py
src/model/: iris_model.py
