[tool.poetry]
name = "ml-eng-project"
version = "0.1.0"
description = ""
authors = ["Sebastian Espinosa <sebastian-2296@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
scikit-learn = "1.3.2"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
